--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
     "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
     "enzyme": "^3.11.0",
+    "jest": "^26.6.3",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
@@ -20,7 +22,9 @@
     "redux-devtools": "^3.7.0",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.1",
+    "update": "^0.7.4",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
